@@ -56,6 +56,7 @@
         }
 
 
+
     </style>
 </head>
 
@@ -78,6 +79,10 @@
 <ul>
     <li><span class="label label-success">Feature</span> Support display scaling (Windows) (<a
         href="https://trac.cyberduck.io/ticket/8961">#8961</a>)
+    </li>
+    <li><span class="label label-success">Feature</span> Authentication using AssumeRole and GetSessionToken with AWS
+        Security Token Service (STS) (S3) (<a
+            href="https://trac.cyberduck.io/ticket/8880">#8880</a>)
     </li>
     <li><span class="label label-warning">Bugfix</span> Allow configuration of charset in bookmark (SFTP)</li>
     <li><span class="label label-warning">Bugfix</span> Incomplete transfers (<a
